0.4.1
 - docs: include Readme.rst for description on PyPI
0.4.0
 - fix: merge all pull requests to original igor project (#1, #2, #3)
 - setup: migrate to pyproject.toml